[package]
name = "salvo-flash"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Flash message support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = ["http", "session", "web", "framework", "server"]
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cookie-store"]
full = ["cookie-store", "session-store"]
cookie-store = ["salvo_core/cookie", "dep:serde_json"]
session-store = ["dep:salvo-session"]

[dependencies]
async-session = { workspace = true, optional = true }
salvo_core = { workspace = true, default-features = false }
salvo-session = { workspace = true, optional = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
salvo_core = {workspace = true, features = ["test"] }
tokio = { workspace = true }

[lints]
workspace = true
