[package]
name = "salvo-jwt-auth"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = """
Jwt auth support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["oidc"]
oidc = ["dep:reqwest"]

[dependencies]
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
salvo_core = { workspace = true, features = ["cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "test"] }
time.workspace = true
