[package]
name = "salvo-jwt-auth"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Jwt auth support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["oidc", "ring"]
oidc = ["dep:bytes", "hyper-rustls", "dep:hyper-util", "dep:http-body-util", "ring"]
# aws-lc-rs = ["hyper-rustls?/aws-lc-rs"]
ring = ["hyper-rustls?/ring"]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
http-body-util = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true, features = ["native-tokio", "http1", "tls12", "logging"] }
hyper-util = { workspace = true, optional = true, features = ["client-legacy", "http1", "http2", "tokio"] }
salvo_core = { workspace = true, features = ["cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow.workspace = true
salvo = { path = "../salvo", features = ["http1", "test", "jwt-auth", "anyhow"] }
time.workspace = true

[lints]
workspace = true
