[package]
name = "salvo_macros"
version = { workspace = true }
authors = ["Chrislearn Young <chris@acroidea.com>", "driftluo <driftluo@foxmail.com>"]
edition = { workspace = true }
rust-version = { workspace = true }
description = "salvo proc macros"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "salvo_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
salvo-serde-util = { workspace = true }
syn = { workspace = true, features = ["full", "parsing"] }

[lints]
workspace = true