[package]
name = "salvo-oapi-macros"
version = { workspace = true }
edition = "2021"
description = "Macros for salvo-oapi"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/salvo-oapi-macros/"
homepage = "https://github.com/salvo-rs/salvo"
repository = "https://github.com/salvo-rs/salvo"
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>", "Chrislearn Young <chislearn@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro-error = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[features]
default = []
chrono = []
decimal = []
decimal-float = []
ulid = []
url = []
uuid = []
time = []
smallvec = []
repr = []
indexmap = []
