[package]
name = "salvo-oapi-macros"
version = { workspace = true }
edition = { workspace = true }
description = "Macros for salvo-oapi"
license = { workspace = true }
documentation = "https://docs.rs/salvo-oapi-macros/"
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>", "Chrislearn Young <chislearn@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro-error = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[features]
default = []
chrono = []
decimal = []
decimal-float = []
ulid = []
url = []
uuid = []
time = []
smallvec = []
repr = []
indexmap = []
