[package]
name = "salvo-oapi"
version = { workspace = true }
edition = "2021"
description = "OpenApi support for Salvo web framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/salvo-oapi/"
homepage = "https://github.com/salvo-rs/salvo"
repository = "https://github.com/salvo-rs/salvo"
keywords = ["http", "async", "salvo", "openapi", "swagger-ui"]
categories = ["network-programming", "asynchronous"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>", "Chrislearn Young <chrislearn@hotmail.com>"]

[features]
default = []
full = ["swagger-ui", "rapidoc", "redoc", "chrono", "decimal", "yaml", "ulid", "uuid", "time", "smallvec", "indexmap"]
swagger-ui = ["dep:rust-embed"]
rapidoc = []
redoc = []
chrono = ["salvo-oapi-macros/chrono"]
decimal = ["salvo-oapi-macros/decimal"]
yaml = ["dep:serde_yaml"]
ulid = ["salvo-oapi-macros/ulid"]
uuid = ["salvo-oapi-macros/uuid"]
time = ["salvo-oapi-macros/time"]
smallvec = ["salvo-oapi-macros/smallvec"]
indexmap = ["salvo-oapi-macros/indexmap"]

[dependencies]
salvo_core = { workspace = true, default-features = false, features = ["cookie"] }
salvo-oapi-macros = { workspace = true, default-features = false }
base64 = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
inventory = { workspace = true }
mime_guess = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Non-feature optional dependencies
email_address = { workspace = true, optional = true }
hostname-validator = { workspace = true, optional = true }

# Feature optional dependencies
url = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
rust-embed = { workspace = true, features = ["interpolate-folder-path"], optional = true }
serde_yaml = { workspace = true, optional = true }

[build-dependencies]
regex = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert-json-diff = { workspace = true }
salvo_core = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde-human-readable"] }