[package]
name = "salvo-oapi"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
description = "OpenApi support for Salvo web framework"
readme = "./README.md"
license = { workspace = true }
documentation = "https://docs.rs/salvo-oapi/"
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["http", "async", "salvo", "openapi", "swagger-ui"]
categories = ["network-programming", "asynchronous"]
authors = [
    "Juha Kukkonen <juha7kukkonen@gmail.com>",
    "Chrislearn Young <chris@acroidea.com>",
]

[features]
default = []
full = [
    "swagger-ui",
    "scalar",
    "rapidoc",
    "redoc",
    "chrono",
    "decimal",
    "url",
    "ulid",
    "uuid",
    "time",
    "smallvec",
    "indexmap",
    "yaml",
    "non-strict-integers",
    "compact_str",
]
swagger-ui = ["dep:rust-embed"]
scalar = []
rapidoc = []
redoc = []
chrono = ["salvo-oapi-macros/chrono", "dep:chrono"]
decimal = ["salvo-oapi-macros/decimal", "dep:rust_decimal"]
decimal-float = ["salvo-oapi-macros/decimal-float", "dep:rust_decimal"]
non-strict-integers = ["salvo-oapi-macros/non-strict-integers"]
url = ["salvo-oapi-macros/url", "dep:url"]
ulid = ["salvo-oapi-macros/ulid", "dep:ulid"]
uuid = ["salvo-oapi-macros/uuid", "dep:uuid"]
time = ["salvo-oapi-macros/time", "dep:time"]
smallvec = ["salvo-oapi-macros/smallvec", "dep:smallvec"]
indexmap = ["salvo-oapi-macros/indexmap"]
yaml = ["dep:serde_norway"]
preserve-order = ["preserve-path-order", "preserve-prop-order"]
preserve-path-order = []
preserve-prop-order = []
compact_str = ["salvo-oapi-macros/compact_str", "dep:compact_str"]

[dependencies]
salvo_core = { workspace = true, default-features = false, features = [
    "cookie",
] }
salvo-oapi-macros = { workspace = true, default-features = false }
base64 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
inventory = { workspace = true }
mime-infer = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }

# Feature optional dependencies
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
serde_norway = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
time = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }

[build-dependencies]
regex = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert-json-diff = { workspace = true }
salvo_core = { workspace = true, default-features = false, features = [
    "cookie",
    "test",
] }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde-human-readable"] }
compact_str = { workspace = true, features = ["serde"] }

[lints]
workspace = true
