[package]
name = "salvo-otel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
OpenTelemetry support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = ["http", "OpenTelemetry", "web", "framework", "server"]
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
opentelemetry-http = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
salvo_core = { workspace = true, default-features = false }
tracing = { workspace = true }

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true }

[lints]
workspace = true
