[package]
name = "salvo-proxy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = """
TBD: Proxy support for salvo web server framework.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-util = { workspace = true, default-features = false }
salvo_core = { workspace = true, default-features = false }
tracing = { workspace = true }
tokio = { workspace = true }
fastrand = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true, features = ["tokio", "http1", "http2", "client-legacy"] }
percent-encoding = { workspace = true }

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true