[package]
name = "salvo-proxy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
HTTP proxy support for the Salvo web server framework. Provides flexible proxy middleware
for forwarding requests to upstream servers.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["ring", "hyper-client"]
full = ["ring", "hyper-client", "reqwest-client"]
# aws-lc-rs = ["hyper-rustls/aws-lc-rs"]
ring = ["hyper-rustls/ring"]
hyper-client = ["dep:hyper-util", "dep:hyper-rustls"]
reqwest-client = ["dep:reqwest"]

[dependencies]
futures-util = { workspace = true, default-features = false }
salvo_core = { workspace = true, default-features = false }
tracing = { workspace = true }
tokio = { workspace = true }
fastrand = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-rustls = { workspace = true, optional = true, features = ["native-tokio", "rustls-native-certs", "ring", "http1", "tls12", "logging"] }
hyper-util = { workspace = true, optional = true, features = ["tokio", "http1", "http2", "client-legacy"] }
percent-encoding = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["stream"] }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "server", "test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
