[package]
name = "salvo-proxy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
HTTP proxy support for the Salvo web server framework. Provides flexible proxy middleware
for forwarding requests to upstream servers.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["aws-lc-rs", "hyper-client", "unix-sock-client"]
full = ["aws-lc-rs", "hyper-client", "reqwest-client"]
aws-lc-rs = ["hyper-rustls?/aws-lc-rs", "reqwest?/rustls"]
ring = ["hyper-rustls?/ring", "reqwest?/rustls-no-provider", "rustls", "rustls/ring"]
hyper-client = ["dep:hyper-util", "dep:hyper-rustls"]
reqwest-client = ["dep:reqwest"]
unix-sock-client = []

[dependencies]
fastrand = { workspace = true }
futures-util = { workspace = true, default-features = false }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-rustls = { workspace = true, optional = true, features = [
    "native-tokio",
    "rustls-native-certs",
    "http1",
    "http2",
    "tls12",
    "logging",
] }
hyper-util = { workspace = true, optional = true, features = [
    "tokio",
    "http1",
    "http2",
    "client-legacy",
] }
local-ip-address = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["charset", "http2", "system-proxy", "stream"] }
salvo_core = { workspace = true, default-features = false }
rustls = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
salvo_core = { workspace = true, features = ["http1", "server", "test"] }
rustls ={ workspace = true, features = ["aws-lc-rs"]}

[lints]
workspace = true
