[package]
name = "salvo-quinn"
version.workspace = true
edition.workspace = true
description = "quinn supports for salvo"
authors = ["Sean McArthur <sean@seanmonstar.com>", "Jean-Christophe BEGUE <jc.begue@pm.me>", "Chrislearn Young <chris@acroidea.com>"]
license = "MIT"

[dependencies]
bytes.workspace = true
futures-util = { workspace = true }
http.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
fastrand.workspace = true
quinn = { workspace = true, features = ["tls-rustls", "ring"] }
quinn-proto = { workspace = true}
salvo-http3.workspace = true


[dev-dependencies]
assert_matches = "1.3.0"
futures-util = { version = "0.3", features = ["io"] }
proptest = "1"
rcgen = "0.10"
rustls.workspace = true
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
bytes = "1"
quinn = { version = "0.8.0", features = ["tls-rustls", "ring"] }
quinn-proto = { version = "0.9.0" }
