[package]
name = "salvo-rate-limiter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
Rate limiter for salvo web server framework.
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["memory-store", "sliding-guard"]
all = ["memory-store", "sliding-guard"]
memory-store = []
sliding-guard = []

[dependencies]
salvo_core = { workspace = true, default-features = false }
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
salvo_core = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
