[package]
name = "salvo"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
codecov = { repository = "salvo-rs/salvo", branch = "main", service = "github" }

[lib]
name = "salvo"
path = "src/lib.rs"

[features]
default = ["test", "http1", "http2", "quinn", "cookie"]
full = ["test", "cookie", "rustls", "native-tls", "openssl", "unix", "anyhow", "eyre", "cache", "cors", "csrf", "flash", "rate-limiter", "session", "serve-static", "otel", "oapi"]
cookie = ["salvo_core/cookie"]
http1 = ["salvo_core/http1"]
http2 = ["salvo_core/http2"]
quinn = ["salvo_core/quinn"]
rustls = ["salvo_core/rustls"]
native-tls = ["salvo_core/native-tls"]
openssl = ["salvo_core/openssl"]
unix = ["salvo_core/unix"]
acme = ["salvo_core/acme"]
anyhow = ["salvo_core/anyhow"]
eyre = ["salvo_core/eyre"]
test = ["salvo_core/test"]
affix = ["salvo_extra/affix"]
basic-auth = ["salvo_extra/basic-auth"]
force-https = ["salvo_extra/force-https"]
jwt-auth = ["salvo_extra/jwt-auth"]
catch-panic = ["salvo_extra/catch-panic"]
compression = ["salvo_extra/compression"]
logging = ["salvo_extra/logging"]
proxy = ["salvo-proxy"]
size-limiter = ["salvo_extra/size-limiter"]
sse = ["salvo_extra/sse"]
trailing-slash = ["salvo_extra/trailing-slash"]
timeout = ["salvo_extra/timeout"]
ws = ["salvo_extra/ws"]
caching-headers = ["salvo_extra/caching-headers"]
cache = ["dep:salvo-cache"]
cors = ["dep:salvo-cors"]
csrf = ["dep:salvo-csrf"]
flash = ["dep:salvo-flash"]
rate-limiter = ["dep:salvo-rate-limiter"]
session = ["dep:salvo-session"]
serve-static = ["dep:salvo-serve-static"]
otel = ["dep:salvo-otel"]
oapi = ["dep:salvo-oapi"]

[dependencies]
salvo_core = { workspace = true }
salvo_extra = { workspace = true, features = ["default"], optional = true }
salvo-cache = { workspace = true, features = ["default"], optional = true }
salvo-cors = { workspace = true, optional = true }
salvo-csrf = { workspace = true, features = ["all"], optional = true }
salvo-flash = { workspace = true, features = ["all"], optional = true }
salvo-rate-limiter = { workspace = true, features = ["all"], optional = true }
salvo-session = { workspace = true, optional = true }
salvo-serve-static = { workspace = true, features = ["all"], optional = true }
salvo-proxy = { workspace = true, optional = true }
salvo-otel = { workspace = true, optional = true }
salvo-oapi = { workspace = true, features = ["all"], optional = true }
