[package]
name = "salvo-serde-util"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "serde util for salvo."
license = { workspace = true }
documentation = "https://docs.rs/salvo-serde-util/"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]
authors = ["Chrislearn Young <chris@acroidea.com>"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true